[gd_scene load_steps=7 format=3 uid="uid://c02eop8tsk5x3"]

[ext_resource type="Script" path="res://scenes/section_eleves.gd" id="1_62hxx"]
[ext_resource type="Texture2D" uid="uid://cb0v22pb5kj61" path="res://images/resource-group-new.svg" id="2_2cc8e"]
[ext_resource type="Texture2D" uid="uid://dn0a40dtluin2" path="res://images/list-add-user.svg" id="3_y3p7b"]
[ext_resource type="Texture2D" uid="uid://ccc1wypxk6wte" path="res://images/filename-dash-amarok.svg" id="4_mysub"]
[ext_resource type="Texture2D" uid="uid://dspcbbsm5fysm" path="res://images/edit-clear-history.svg" id="5_rtyxr"]
[ext_resource type="Texture2D" uid="uid://dh3j05i7rv6fn" path="res://images/view-sort.svg" id="6_f56p3"]

[node name="SectionEleves" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_62hxx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Entrees" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Entrees"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Entrees/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_2cc8e")

[node name="Classe" type="RichTextLabel" parent="MarginContainer/Entrees/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "C11_CLASSE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NomClasse" type="Label" parent="MarginContainer/Entrees/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "??"
horizontal_alignment = 1

[node name="EntreeClasse" type="LineEdit" parent="MarginContainer/Entrees"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "C12_CLASSE"
max_length = 20
context_menu_enabled = false
caret_blink = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/Entrees"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Entrees"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Entrees/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_y3p7b")

[node name="TitreEleves" type="RichTextLabel" parent="MarginContainer/Entrees/HBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "C21_TITRE_ELEVES"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Comptage" type="Label" parent="MarginContainer/Entrees/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Entrees"]
layout_mode = 2
size_flags_vertical = 3

[node name="Liste" type="RichTextLabel" parent="MarginContainer/Entrees/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="EntreeEleve" type="LineEdit" parent="MarginContainer/Entrees"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "C22_ELEVE"
max_length = 12
context_menu_enabled = false
caret_blink = true

[node name="EnleverDernier" type="Button" parent="MarginContainer/Entrees"]
layout_mode = 2
text = "C23_SUPPR_NOM"
icon = ExtResource("4_mysub")

[node name="ResetListe" type="Button" parent="MarginContainer/Entrees"]
layout_mode = 2
text = "C24_EFFACER_ELEVES"
icon = ExtResource("5_rtyxr")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Entrees"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Entrees"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Entrees/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("6_f56p3")

[node name="Tris" type="RichTextLabel" parent="MarginContainer/Entrees/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "C31_TRIS"
fit_content = true

[node name="Alphabet" type="Button" parent="MarginContainer/Entrees/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "C32_AZ"

[connection signal="text_submitted" from="MarginContainer/Entrees/EntreeClasse" to="." method="_on_entree_classe_text_submitted"]
[connection signal="text_submitted" from="MarginContainer/Entrees/EntreeEleve" to="." method="_on_entree_eleve_text_submitted"]
[connection signal="pressed" from="MarginContainer/Entrees/EnleverDernier" to="." method="_on_enlever_dernier_pressed"]
[connection signal="pressed" from="MarginContainer/Entrees/ResetListe" to="." method="_on_reset_liste_pressed"]
[connection signal="pressed" from="MarginContainer/Entrees/HBoxContainer3/Alphabet" to="." method="_on_alphabet_pressed"]
